--- a/designer/mainwindow.ui
+++ b/designer/mainwindow.ui
@@ -110,7 +110,7 @@
      </rect>
     </property>
     <property name="value">
-     <number>24</number>
+     <number>100</number>
     </property>
    </widget>
    <widget class="QLabel" name="processlabel">
@@ -128,15 +128,15 @@
      </font>
     </property>
     <property name="text">
-     <string/>
+     <string>Listo.</string>
     </property>
    </widget>
    <widget class="QSlider" name="songSlider">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>80</x>
       <y>555</y>
-      <width>1111</width>
+      <width>1031</width>
       <height>21</height>
      </rect>
     </property>
@@ -153,19 +153,24 @@
    <widget class="QPushButton" name="playbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>550</y>
-      <width>31</width>
-      <height>31</height>
+      <x>10</x>
+      <y>540</y>
+      <width>51</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>20</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
      <string>▶</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="synthbtn">
@@ -252,6 +257,24 @@
     </property>
     <property name="text">
      <string>-</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="playtimelabel">
+    <property name="geometry">
+     <rect>
+      <x>1130</x>
+      <y>550</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>00:00</string>
     </property>
    </widget>
   </widget>
