--- a/designer/mainwindow.ui
+++ b/designer/mainwindow.ui
@@ -59,7 +59,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Guardar</string>
+     <string>Exportar</string>
     </property>
    </widget>
    <widget class="QLabel" name="trackslabel">
@@ -136,7 +136,7 @@
      <rect>
       <x>80</x>
       <y>555</y>
-      <width>1031</width>
+      <width>991</width>
       <height>21</height>
      </rect>
     </property>
@@ -211,16 +211,6 @@
      <string>Espectrograma</string>
     </property>
    </widget>
-   <widget class="QListWidget" name="effect_list">
-    <property name="geometry">
-     <rect>
-      <x>710</x>
-      <y>80</y>
-      <width>471</width>
-      <height>451</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QPushButton" name="eplusbtn">
     <property name="geometry">
      <rect>
@@ -262,9 +252,9 @@
    <widget class="QLabel" name="playtimelabel">
     <property name="geometry">
      <rect>
-      <x>1130</x>
+      <x>1090</x>
       <y>550</y>
-      <width>61</width>
+      <width>101</width>
       <height>31</height>
      </rect>
     </property>
@@ -274,7 +264,17 @@
      </font>
     </property>
     <property name="text">
-     <string>00:00</string>
+     <string>00:00 / 00:00</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="effect_list">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>80</y>
+      <width>481</width>
+      <height>451</height>
+     </rect>
     </property>
    </widget>
   </widget>
